--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/alcreates/Bamazon#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "prompt": "^1.0.0"
   }
 }
