--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/alcreates/Bamazon#readme",
   "dependencies": {
     "colors": "^1.1.2",
+    "pad": "^1.0.0",
     "prompt": "^1.0.0"
   }
 }
